crates/au-cli/tests/it/snapshots/it__scenarios__fills-contract-conflict-nested-exclusivity.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "fills-contract-conflict-nested-exclusivity",
      "message": "nested `fills:` requires 'causes', but an ancestor `fills!:` forbids any field other than 'rationale'",
      "related": [
        {
          "file": "<root>/scenarios/fills-contract-conflict-nested-exclusivity/type/decision.type.yaml",
          "line_col": {
            "end": {
              "col": 22,
              "line": 7
            },
            "start": {
              "col": 13,
              "line": 7
            }
          },
          "range": {
            "end": 113,
            "start": 104
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/fills-contract-conflict-nested-exclusivity/type/decision.type.yaml",
        "line_col": {
          "end": {
            "col": 22,
            "line": 10
          },
          "start": {
            "col": 16,
            "line": 10
          }
        },
        "range": {
          "end": 169,
          "start": 163
        }
      }
    }
  ],
  "graph": {
    "types": [
      {
        "abstract": false,
        "body": [
          {
            "body": [
              {
                "body": null,
                "fills": {
                  "exclusive": false,
                  "fields": [
                    "causes"
                  ]
                },
                "kind": "section",
                "name": "Detail",
                "optional": false
              }
            ],
            "fills": {
              "exclusive": true,
              "fields": [
                "rationale"
              ]
            },
            "kind": "section",
            "name": "Why",
            "optional": false
          }
        ],
        "effective_body": [
          {
            "body": [
              {
                "body": null,
                "fills": {
                  "exclusive": false,
                  "fields": [
                    "causes"
                  ]
                },
                "kind": "section",
                "name": "Detail",
                "optional": false
              }
            ],
            "fills": {
              "exclusive": true,
              "fields": [
                "rationale"
              ]
            },
            "kind": "section",
            "name": "Why",
            "optional": false
          }
        ],
        "fields": [
          {
            "key_span": {
              "end": 21,
              "line_col": {
                "end": {
                  "col": 14,
                  "line": 2
                },
                "start": {
                  "col": 3,
                  "line": 2
                }
              },
              "start": 10
            },
            "name": "description",
            "required": true,
            "shape": "String",
            "shape_ast": {
              "kind": "primitive",
              "name": "String"
            }
          },
          {
            "key_span": {
              "end": 42,
              "line_col": {
                "end": {
                  "col": 13,
                  "line": 3
                },
                "start": {
                  "col": 3,
                  "line": 3
                }
              },
              "start": 32
            },
            "name": "rationale",
            "required": false,
            "shape": "String",
            "shape_ast": {
              "kind": "primitive",
              "name": "String"
            }
          },
          {
            "key_span": {
              "end": 60,
              "line_col": {
                "end": {
                  "col": 10,
                  "line": 4
                },
                "start": {
                  "col": 3,
                  "line": 4
                }
              },
              "start": 53
            },
            "name": "causes",
            "required": false,
            "shape": "String",
            "shape_ast": {
              "kind": "primitive",
              "name": "String"
            }
          }
        ],
        "hash": "169d95917f65a5c9",
        "meta_blocks": null,
        "name": "decision",
        "parents": [],
        "required_meta": [],
        "sealed": null,
        "source": {
          "file": "<root>/scenarios/fills-contract-conflict-nested-exclusivity/type/decision.type.yaml",
          "span": {
            "end": 170,
            "line_col": {
              "end": {
                "col": 1,
                "line": 11
              },
              "start": {
                "col": 1,
                "line": 1
              }
            },
            "start": 0
          }
        },
        "unmet_required_meta": []
      }
    ]
  }
}
