crates/au-cli/tests/it/snapshots/it__scenarios__fills-contract-exceeded.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "fills-contract-exceeded",
      "message": "fills!: forbids field 'rationale' inside scope 1 Assumptions — only 'assumptions' permitted",
      "related": [
        {
          "file": "<root>/scenarios/fills-contract-exceeded/type/decision.type.yaml",
          "line_col": {
            "end": {
              "col": 24,
              "line": 7
            },
            "start": {
              "col": 13,
              "line": 7
            }
          },
          "range": {
            "end": 128,
            "start": 117
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/fills-contract-exceeded/decision.md",
        "line_col": {
          "end": {
            "col": 49,
            "line": 11
          },
          "start": {
            "col": 1,
            "line": 11
          }
        },
        "range": {
          "end": 206,
          "start": 158
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 29,
                        "line_col": {
                          "end": {
                            "col": 30,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/fills-contract-exceeded/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "fills-contract-exceeded"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "fills-contract-exceeded"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/fills-contract-exceeded/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 102,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 88
            },
            "text": "Assumptions"
          },
          {
            "content": "[:assumptions] Page numbering is monotonic.",
            "kind": "inline_code",
            "span": {
              "end": 148,
              "line_col": {
                "end": {
                  "col": 46,
                  "line": 10
                },
                "start": {
                  "col": 1,
                  "line": 10
                }
              },
              "start": 103
            }
          },
          {
            "content": "[:rationale] SQLite scales fine at dev volume.",
            "kind": "inline_code",
            "span": {
              "end": 206,
              "line_col": {
                "end": {
                  "col": 49,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 11
                }
              },
              "start": 158
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "assumptions",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-contract-exceeded/type/decision.type.yaml",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-contract-exceeded/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "rationale",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-contract-exceeded/type/decision.type.yaml",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 148,
                        "line_col": {
                          "end": {
                            "col": 46,
                            "line": 10
                          },
                          "start": {
                            "col": 1,
                            "line": 10
                          }
                        },
                        "start": 103
                      },
                      "file": "<root>/scenarios/fills-contract-exceeded/decision.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Assumptions"
                      }
                    ],
                    "surface": "body_inline_code",
                    "value": {
                      "kind": "scalar",
                      "value": "Page numbering is monotonic."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Page numbering is monotonic."
                }
              }
            ],
            "field": "assumptions"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/fills-contract-exceeded/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 206,
                        "line_col": {
                          "end": {
                            "col": 49,
                            "line": 11
                          },
                          "start": {
                            "col": 1,
                            "line": 11
                          }
                        },
                        "start": 158
                      },
                      "file": "<root>/scenarios/fills-contract-exceeded/decision.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Assumptions"
                      }
                    ],
                    "surface": "body_inline_code",
                    "value": {
                      "kind": "scalar",
                      "value": "SQLite scales fine at dev volume."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "SQLite scales fine at dev volume."
                }
              }
            ],
            "field": "rationale"
          }
        ],
        "file": "<root>/scenarios/fills-contract-exceeded/decision.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Assumptions",
            "optional": false,
            "path": [
              "Assumptions"
            ],
            "present": true,
            "span": {
              "end": 102,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 88
            }
          }
        ]
      }
    ]
  }
}
